<resources>
    <string name="app_name">SannacodeTest</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="entry_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="name">Имя</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="email">E-mail</string>
    <string name="submit">Подтвердить</string>
    <string name="menu_log_out">Log out</string>
    <string name="loading">Загрузка…</string>
    <string name="greetings">Приветствуем</string>
    <string name="sign_in">Войти</string>
    <string name="go_to_contacts">Перейти к контактам</string>
    <string name="sign_out">Выйти</string>
    <string name="menu_sort_by_name">По имени</string>
    <string name="menu_sort_by_last_name">По фамилии</string>
    <string name="menu_sort_by_phone">По телефону</string>
    <string name="menu_sort_by_email">По почте</string>
    <string name="please_sign_in">Пожалуйста, выполните вход</string>
    <string name="name_placeholder">Name</string>
    <string name="lastname_placeholder">Lastname</string>
    <string name="phone_placeholder">Phone</string>
    <string name="email_placeholder">Email</string>
    <string name="phone_field_name">Тел.:</string>
    <string name="email_field_name">E-mail:</string>
    <string name="title">Title</string>
    <string name="hello_phrase">Антон Лабенский</string>
    <string name="entry_form_warning">Please fill all required fields</string>
    <string name="google_play_error">Google Play Services error.</string>
    <string name="auth_failed">Authentication failed.</string>
</resources>
