<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main_screen_background"
    tools:context="com.advrtizr.sannacodetest.view.LoginActivity">

    <TextView
        android:id="@+id/tv_main_screen_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_in"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_centerInParent="true"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/user_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="2dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tv_greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/greetings"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorWhite"
            android:text="@string/hello_phrase"
            android:textSize="18sp" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorWhite"
        android:background="@drawable/rectangle_round_corners"
        android:text="@string/sign_in" />

    <LinearLayout
        android:id="@+id/sign_in_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle_round_corners"
            android:text="@string/go_to_contacts" />

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="match_parent"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rectangle_round_corners"
            android:layout_height="wrap_content"
            android:text="@string/sign_out" />
    </LinearLayout>

</RelativeLayout>
